force-app/main/default/objects/Opportunity_LAV_Snapshot__c/Opportunity_LAV_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Opportunity LAV Snapshot</label>
    <nameField>
        <displayFormat>SS-{0}</displayFormat>
        <label>Opps By Product Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity LAV Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>