force-app/main/default/objects/Opportunity_LAV_Snapshot__c/fields/Account_Namee__c.field-meta.xml
<CustomField>
    <fullName>Account_Namee__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>