force-app/main/default/objects/Opportunity_LAV_Snapshot__c/fields/Amount_Converted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Converted__c</fullName>
    <label>Amount (Converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>