force-app/main/default/objects/Opportunity_LAV_Snapshot__c/fields/Sales_Hierarchy_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Hierarchy_2__c</fullName>
    <label>Sales Hierarchy 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>