force-app/main/default/objects/Opportunity_LAV_Snapshot__c/fields/Total_Price_Converted__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Converted__c</fullName>
    <label>Total Price (Converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>